--- a/references.bib
+++ b/references.bib
@@ -7,8 +7,7 @@
   pages = {1--24},
   publisher = {Springer International Publishing},
   address = {Cham},
-  doi = {10.1007/978-3-030-18601-2_1},
-  isbn = {978-3-030-18600-5 978-3-030-18601-2}
+  doi = {10.1007/978-3-030-18601-2_1}
 }
 
 @inproceedings{armeni_3d_2016,
@@ -40,6 +39,31 @@
   volume = {228},
   pages = {109673},
   doi = {10.1016/j.compag.2024.109673}
+}
+
+@inproceedings{botturi_stewie_2023,
+  title = {{{STEWIE}}: {{eSTimating grapE}} Berries Number and Radius from Images Using a {{Weakly supervIsed nEural}} Network},
+  shorttitle = {{{STEWIE}}},
+  booktitle = {2023 {{IEEE International Workshop}} on {{Metrology}} for {{Agriculture}} and {{Forestry}} ({{MetroAgriFor}})},
+  author = {Botturi, Davide and Gnutti, Alessandro and Nuzzi, Cristina and Lanza, Bernardo and Pasinetti, Simone},
+  year = {2023},
+  month = nov,
+  pages = {277--282},
+  publisher = {IEEE},
+  address = {Pisa, Italy},
+  doi = {10.1109/MetroAgriFor58484.2023.10424094}
+}
+
+@article{chen_instance_2023,
+  title = {Instance {{Segmentation}} and {{Number Counting}} of {{Grape Berry Images Based}} on {{Deep Learning}}},
+  author = {Chen, Yanmin and Li, Xiu and Jia, Mei and Li, Jiuliang and Hu, Tianyang and Luo, Jun},
+  year = {2023},
+  month = jun,
+  journal = {Applied Sciences},
+  volume = {13},
+  number = {11},
+  pages = {6751},
+  doi = {10.3390/app13116751}
 }
 
 @article{du_instance_2023,
@@ -110,6 +134,18 @@
   doi = {10.1109/TPAMI.2020.3005434}
 }
 
+@article{jadhav_comparative_2021,
+  title = {{{COMPARATIVE ANALYSIS OF DEEP LEARNING ARCHITECTURES FOR GRAPE CLUSTER INSTANCE SEGMENTATION}}},
+  author = {Jadhav, Parul and Barbole,, Dhanashree},
+  year = {2021},
+  month = mar,
+  journal = {INFORMATION TECHNOLOGY IN INDUSTRY},
+  volume = {9},
+  number = {1},
+  pages = {344--352},
+  doi = {10.17762/itii.v9i1.138}
+}
+
 @article{jiang_3d_2019,
   title = {{{3D}} Point Cloud Data to Quantitatively Characterize Size and Shape of Shrub Crops},
   author = {Jiang, Yu and Li, Changying and Takeda, Fumiomi and Kramer, Elizabeth A. and Ashrafi, Hamid and Hunter, Jamal},
@@ -169,6 +205,29 @@
   doi = {10.1016/j.compag.2020.105672}
 }
 
+@article{liu_estimation_2022,
+  title = {Estimation of {{Characteristic Parameters}} of {{Grape Clusters Based}} on {{Point Cloud Data}}},
+  author = {Liu, Wentao and Wang, Chenglin and Yan, De and Chen, Weilin and Luo, Lufeng},
+  year = {2022},
+  month = jul,
+  journal = {Frontiers in Plant Science},
+  volume = {13},
+  pages = {885167},
+  doi = {10.3389/fpls.2022.885167}
+}
+
+@inproceedings{luo_3d_2023,
+  title = {{{3D Semantic Segmentation}} for {{Grape Bunch Point Cloud Based}} on {{Feature Enhancement}}},
+  booktitle = {2023 {{IEEE International Conference}} on {{Robotics}} and {{Biomimetics}} ({{ROBIO}})},
+  author = {Luo, Jiangtao and Zhang, Dongbo and Yi, Tao},
+  year = {2023},
+  month = dec,
+  pages = {1--6},
+  publisher = {IEEE},
+  address = {Koh~Samui, Thailand},
+  doi = {10.1109/ROBIO58561.2023.10354793}
+}
+
 @article{luo_infield_2022,
   title = {In-Field Pose Estimation of Grape Clusters with Combined Point Cloud Segmentation and Geometric Analysis},
   author = {Luo, Lufeng and Yin, Wei and Ning, Zhengtong and Wang, Jinhai and Wei, Huiling and Chen, Weilin and Lu, Qinghua},
@@ -211,8 +270,7 @@
   pages = {8657--8663},
   publisher = {IEEE},
   address = {Yokohama, Japan},
-  doi = {10.1109/ICRA57147.2024.10611717},
-  isbn = {979-8-3503-8457-4}
+  doi = {10.1109/ICRA57147.2024.10611717}
 }
 
 @inproceedings{marangoz_fruit_2022,
@@ -224,8 +282,20 @@
   pages = {471--476},
   publisher = {IEEE},
   address = {Mexico City, Mexico},
-  doi = {10.1109/CASE49997.2022.9926466},
-  isbn = {978-1-6654-9042-9}
+  doi = {10.1109/CASE49997.2022.9926466}
+}
+
+@incollection{mohimont_comparison_2021,
+  title = {Comparison of {{Machine Learning}} and {{Deep Learning Methods}} for {{Grape Cluster Segmentation}}},
+  booktitle = {Smart and {{Sustainable Agriculture}}},
+  author = {Mohimont, Lucas and Roesler, Mathias and Rondeau, Marine and Gaveau, Nathalie and Alin, Fran{\c c}ois and Steffenel, Luiz Angelo},
+  editor = {Boumerdassi, Selma and Ghogho, Mounir and Renault, {\'E}ric},
+  year = {2021},
+  volume = {1470},
+  pages = {84--102},
+  publisher = {Springer International Publishing},
+  address = {Cham},
+  doi = {10.1007/978-3-030-88259-4_7}
 }
 
 @article{ni_threedimensional_2021,
@@ -248,8 +318,7 @@
   pages = {4226--4233},
   publisher = {IEEE},
   address = {Detroit, MI, USA},
-  doi = {10.1109/IROS55552.2023.10342067},
-  isbn = {978-1-6654-9190-7}
+  doi = {10.1109/IROS55552.2023.10342067}
 }
 
 @inproceedings{park_deepsdf_2019,
@@ -262,8 +331,20 @@
   pages = {165--174},
   publisher = {IEEE},
   address = {Long Beach, CA, USA},
-  doi = {10.1109/CVPR.2019.00025},
-  isbn = {978-1-7281-3293-8}
+  doi = {10.1109/CVPR.2019.00025}
+}
+
+@article{quinones_gcnet_2025,
+  title = {{{GCNet}}: {{A Deep Learning Framework}} for {{Enhanced Grape Cluster Segmentation}} and {{Yield Estimation Incorporating Occluded Grape Detection}} with a {{Correction Factor}} for {{Indoor Experimentation}}},
+  shorttitle = {{{GCNet}}},
+  author = {Qui{\~n}ones, Rubi and Banu, Syeda Mariah and Gultepe, Eren},
+  year = {2025},
+  month = jan,
+  journal = {Journal of Imaging},
+  volume = {11},
+  number = {2},
+  pages = {34},
+  doi = {10.3390/jimaging11020034}
 }
 
 @article{raihen_prediction_2024,
@@ -314,6 +395,18 @@
   doi = {10.1111/cgf.13536}
 }
 
+@article{schnabel_efficient_2007,
+  title = {Efficient {{RANSAC}} for {{Point}}-{{Cloud Shape Detection}}},
+  author = {Schnabel, R. and Wahl, R. and Klein, R.},
+  year = {2007},
+  month = jun,
+  journal = {Computer Graphics Forum},
+  volume = {26},
+  number = {2},
+  pages = {214--226},
+  doi = {10.1111/j.1467-8659.2007.01016.x}
+}
+
 @article{schneider_predicting_2020,
   title = {Towards {{Predicting Vine Yield}}: {{Conceptualization}} of {{3D Grape Models}} and {{Derivation}} of {{Reliable Physical}} and {{Morphological Parameters}}},
   shorttitle = {Towards {{Predicting Vine Yield}}},
@@ -358,6 +451,19 @@
   number = {1},
   pages = {71--85},
   doi = {10.1007/s41095-022-0276-6}
+}
+
+@article{tamura_unsupervised_2025,
+  title = {Unsupervised Monocular Depth Estimation with Omnidirectional Camera for {{3D}} Reconstruction of Grape Berries in the Wild},
+  author = {Tamura, Yasuto and Utsumi, Yuzuko and Miwa, Yuka and Iwamura, Masakazu and Kise, Koichi},
+  editor = {Marchisio, Alberto},
+  year = {2025},
+  month = feb,
+  journal = {PLOS ONE},
+  volume = {20},
+  number = {2},
+  pages = {e0317359},
+  doi = {10.1371/journal.pone.0317359}
 }
 
 @inproceedings{tang_lakenet_2022,
@@ -420,8 +526,7 @@
   year = {2019},
   pages = {133--163},
   publisher = {Elsevier},
-  doi = {10.1016/B978-0-12-814138-0.00006-X},
-  isbn = {978-0-12-814138-0}
+  doi = {10.1016/B978-0-12-814138-0.00006-X}
 }
 
 @inproceedings{vu_softgroup_2022,
@@ -498,8 +603,7 @@
   pages = {365--381},
   publisher = {Springer International Publishing},
   address = {Cham},
-  doi = {10.1007/978-3-030-58545-7_21},
-  isbn = {978-3-030-58544-0 978-3-030-58545-7}
+  doi = {10.1007/978-3-030-58545-7_21}
 }
 
 @inproceedings{yang_pointflow_2019,
@@ -531,8 +635,7 @@
   pages = {728--737},
   publisher = {IEEE},
   address = {Verona},
-  doi = {10.1109/3DV.2018.00088},
-  isbn = {978-1-5386-8425-2}
+  doi = {10.1109/3DV.2018.00088}
 }
 
 @article{zabawa_counting_2020,
